--- a/client/views/pages/documents.html
+++ b/client/views/pages/documents.html
@@ -1,3 +1,4 @@
+<button onclick="testing()">Testing</button>
 <div id="document-page-field" class="container-fluid">
     <div class="row">
         <div class="col col-2 ps-0 pe-0">
