--- a/client/views/partials/navbar/options.html
+++ b/client/views/partials/navbar/options.html
@@ -7,6 +7,7 @@
 <li class="nav-item">
     <a class="nav-link" aria-current="page" href="/images">Images</a>
 </li>
+<!-- DELETE LATER -->
 <li class="nav-item">
-    <a class="nav-link" aria-current="page" href="/show-images">Show Images</a>
+    <a class="nav-link" aria-current="page" href="/admin">Admin</a>
 </li>
