--- a/client/views/layouts/socket.html
+++ b/client/views/layouts/socket.html
@@ -12,6 +12,7 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <link rel="stylesheet" href="/css/main.css">
     $CSS_LINK
     <title>$PAGE_TITLE</title>
 </head>
