--- a/client/views/pages/admin.html
+++ b/client/views/pages/admin.html
@@ -1,3 +1,24 @@
 <div class="container-fluid">
     <h1>Welcome to the admin</h1>
+    <div class="row">
+        <div class="col-4">
+            <h5>Collection Types</h5>
+            <div class="row ms-4 mb-5 border border-4 p-2">
+                <h5>Creating Collection Type</h5>
+                <div class="row mb-3">
+                    <div class="col-12">
+                        <input class="form-control" id="collectiontypename" name="collectiontypename"
+                            placeholder="Collection Type name...">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col-12">
+                        <input class="form-control" id="collectiontypetype" name="collectiontypetype"
+                            placeholder="Collection Type type...">
+                    </div>
+                </div>
+                <button class="btn btn-primary" onclick="createCollectionType()">Create</button>
+            </div>
+        </div>
+    </div>
 </div>
