--- a/client/views/partials/navbar/options.html
+++ b/client/views/partials/navbar/options.html
@@ -7,6 +7,9 @@
 <li class="nav-item">
     <a class="nav-link" aria-current="page" href="/images">Images</a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" aria-current="page" href="/user">User Page</a>
+</li>
 <!-- DELETE LATER -->
 <li class="nav-item">
     <a class="nav-link" aria-current="page" href="/admin">Admin</a>
