--- a/client/views/pages/user.html
+++ b/client/views/pages/user.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid mt-3">
     <div class="row">
         <div class="col-3 me-5">
             <div class="row ms-4 mb-5 border border-4 p-2">
