--- a/client/views/partials/documents/content.html
+++ b/client/views/partials/documents/content.html
@@ -1,14 +1,12 @@
 <div class="card-body">
     <div id="document-content">
         $DOCUMENT_CONTENT
-        <input id="documentid" name="documentid" value="$DOCUMENT_CONTENT_ID" style="display: none;">
-        <input id="documenttype" name="documenttype" value="$DOCUMENT_CONTENT_COLLECTION" style="display: none;">
     </div>
 
 </div>
 <div class="card-footer">
     <div class="btn-group" role="group" aria-label="Document Admin Menu">
-        <button class="btn btn-secondary" onclick="updateDocument()">Update</button>
-        <button class="btn btn-secondary" onclick="deleteDocument()">Delete</button>
+        <button class="btn btn-secondary" onclick="updateDocument('$DOCUMENT_CONTENT_ID_UPDATE')">Update</button>
+        <button class="btn btn-secondary" onclick="deleteDocument('$DOCUMENT_CONTENT_ID_DELETE')">Delete</button>
     </div>
 </div>
