--- a/client/views/partials/navbar/options.html
+++ b/client/views/partials/navbar/options.html
@@ -8,6 +8,9 @@
     <a class="nav-link" aria-current="page" href="/images">Images</a>
 </li>
 <li class="nav-item">
+    <a class="nav-link" aria-current="page" href="/show-images">Show Images</a>
+</li>
+<li class="nav-item">
     <a class="nav-link" aria-current="page" href="/user">User Page</a>
 </li>
 <!-- DELETE LATER -->
