--- a/client/views/pages/images.html
+++ b/client/views/pages/images.html
@@ -1,3 +1,46 @@
 <div class="container-fluid">
-    <h1>Welcome to the images</h1>
+    <h1>Image Management</h1>
+    <div class="col-3">
+        <form action="/images" method="POST" enctype="multipart/form-data">
+            <div class="row row-cols-1">
+                <div class="col">
+                    <select name="type" id="type" class="form-select"
+                        aria-label="Default select example">
+                        $CREATE_IMAGES_TYPES_OPTIONS
+                    </select>
+                </div>
+                <div class="col">
+                    <input class="form-control" name="file" type="file" accept="image/*" required>
+                </div>
+                <div class="col">
+                    <input class="form-control" name="name" placeholder="image name" required>
+                </div>
+                <div class="col">
+                    <input class="form-control" name="description" placeholder="short description" required>
+                </div>
+                <div class="col">
+                    <button type="submit" class="btn btn-primary" onclick="uploadImage()">Upload</button>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
+
+<script>
+    const socket = io();
+    function uploadImage() {
+        var fileInput = document.getElementsByName("file")[0];
+        var nameInput = document.getElementsByName("name")[0];
+        var descriptionInput = document.getElementsByName("description")[0];
+
+        if (fileInput.value === "" || nameInput.value === "" || descriptionInput.value === "") {
+            alert("Please fill in all required fields.");
+            return false; // Prevent form submission
+        } else {
+            alert("Image uploaded")
+            window.location.reload();
+        }
+
+        // Perform form submission or further processing here');
+    }
+</script>
