--- a/client/views/partials/images/imageitem.html
+++ b/client/views/partials/images/imageitem.html
@@ -1,25 +1,32 @@
-<div class="col card p-0">
+<div class="col card p-0 image-container">
+    <div class="card-header">
+        <div class="row">
+            <div class="col">
+                $IMAGE_NAME
+            </div>
+        </div>
+    </div>
     <div class="card-body text-center">
-        <img class="rounded mx-auto d-block show-image-show" src="./images/uploads/$FILENAME">
+        <img class="rounded mx-auto d-block image-item" src="/images/uploads/$FILENAME">
     </div>
     <div class="card-footer">
-        <div class="row test">
+        <div class="row row-cols-2">
             <div class="col col-auto p-1">
-                <button class="btn btn-danger" onclick="deleteImage('$FILEID_DELETE', '$FILENAME_DELETE')">Delete</button>
+                <button class="btn btn-danger image-menu-button" onclick="deleteImage('$FILEID_DELETE', '$FILENAME_DELETE')">Delete</button>
             </div>
             <div class="col col-auto p-1">
-                <button class="btn btn-warning" onclick="copyImageUrl('$FILENAME_COPY')">Copy Path</button>
+                <button class="btn btn-warning image-menu-button" onclick="copyImageUrl('$FILENAME_COPY')">Copy Path</button>
             </div>
         </div>
     </div>
 </div>
 
 <style>
-    .test button {
-        font-size: 1vw;
+    .image-menu-button{
+        font-size: 10px;
     }
-    .show-image-show {
-        width: 300px;
-        max-width: 90%;
+    .image-item{
+        max-width: 100%;
+        max-height: 100vh;
     }
 </style>
