--- a/client/views/partials/images/imagelist.html
+++ b/client/views/partials/images/imagelist.html
@@ -1,4 +1,10 @@
-<!-- $IMAGE_COLLECTIN_NAME-->
-<div class="row row-cols-3 mb-3 p-0 border text-center">
-    $IMAGE_LIST
+<div class="col border rounded mb-3">
+    <div class="row">
+        <div class="col">
+            <h6 class="m-0">$IMAGE_COLLECTION_NAME</h6>
+        </div>
+    </div>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 mb-3 p-3">
+        $IMAGE_LIST
+    </div>
 </div>
