--- a/client/views/partials/images/imageitem.html
+++ b/client/views/partials/images/imageitem.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div class="card-body text-center">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#image-$IMAGE_MODAL_ID_1">
+        <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#image-$IMAGE_MODAL_ID_1">
             <img class="rounded mx-auto d-block image-item" src="/images/uploads/$FILENAME">
         </button>
     </div>
