--- a/client/views/pages/login.html
+++ b/client/views/pages/login.html
@@ -11,6 +11,12 @@
                 <label for="password">Password</label>
             </div>
             <button class="w-100 btn btn-lg btn-primary" type="submit" onclick="signIn()">Sign in</button>
+            <div class="mb-3">
+                <p>Don't have an account? <a href="/register">Sign up</a> now!</p>
+            </div>
+            <div class="mb-3">
+                <p><a href="/forgot-password">Forgot Password?</a></p>
+            </div>
         </form>
     </div>
 </div>
