--- a/client/views/pages/admin.html
+++ b/client/views/pages/admin.html
@@ -23,12 +23,12 @@
         <div class="col">
             <div class="row">
                 <div class="col col-12">
-                    <h5>User Notes</h5>
+                    <h5>User Notes?</h5>
                 </div>
             </div>
             <div class="row">
                 <div class="col col-12">
-                    <h5>User Images</h5>
+                    <h5>User Images?</h5>
                 </div>
             </div>
         </div>
