--- a/client/views/partials/navbar/options.html
+++ b/client/views/partials/navbar/options.html
@@ -10,3 +10,6 @@
 <li class="nav-item">
     <a class="nav-link" aria-current="page" href="/user">User Page</a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" aria-current="page" href="/admin">Admin</a>
+</li>
