cleaned some code

--- a/client/views/pages/documents.html
+++ b/client/views/pages/documents.html
@@ -11,7 +11,8 @@
                         </div>
                         <div id="current-collection">
                         </div>
-                        <button id="document-create-button" type="button" class="btn btn-primary ms-auto disabled" onclick="pickCreateDocument()">Create</button>
+                        <button id="document-create-button" type="button" class="btn btn-primary ms-auto disabled"
+                            onclick="pickCreateDocument()">Create</button>
                     </a>
                     <div id="documents-table-items-field"
                         class="list-group list-group-flush border-bottom scrollarea document-table-content">
@@ -27,5 +28,6 @@
             </div>
         </div>
     </div>
-    <input type="text" id="userid" name="userid" value="$USER_ID" style="display: none;"/>
+    <input type="text" id="userid" name="userid" value="$USER_ID" style="display: none;" />
+
     <script src="/js/documents.js"></script>
