--- a/client/views/partials/images/imageitem.html
+++ b/client/views/partials/images/imageitem.html
@@ -25,7 +25,8 @@
     </div>
 </div>
 
-<div class="modal fade left" id="image-$IMAGE_MODAL_ID_2" tabindex="-1" aria-labelledby="image-modal-$IMAGE_MODAL_ID_3" aria-hidden="true">
+<div class="modal fade left" id="image-$IMAGE_MODAL_ID_2" tabindex="-1" aria-labelledby="image-modal-$IMAGE_MODAL_ID_3"
+    aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -38,21 +39,3 @@
         </div>
     </div>
 </div>
-
-<style>
-    .image-menu-button {
-        font-size: 10px;
-    }
-
-    .image-item {
-        max-width: 100%;
-        max-height: 100vh;
-    }
-    .modal-content {
-        width: 175%;
-    }
-    .modal-body img {
-        max-height: 75vh;
-        padding-left: 0;
-    }
-</style>
