--- a/client/views/pages/images.html
+++ b/client/views/pages/images.html
@@ -29,7 +29,8 @@
         <div class="row">
             <div class="input-group">
                 <span class="input-group-text" id="image-name-description">Image Name:</span>
-                <input id="image-name" name="image-name" type="text" class="form-control" placeholder="Name" aria-label="Name" aria-describedby="input-group-left">
+                <input id="image-name" name="image-name" type="text" class="form-control" placeholder="Name"
+                    aria-label="Name" aria-describedby="input-group-left">
             </div>
         </div>
     </div>
@@ -39,24 +40,10 @@
         </div>
     </div>
 </div>
-<input type="text" id="userid" name="userid" value="$USER_ID" style="display: none;"/>
+<input type="text" id="userid" name="userid" value="$USER_ID" style="display: none;" />
+<script src="/js/images.js"></script>
 
 <script>
-    const socket = io();
-    const userId = document.getElementById('userid').value;
-    function uploadImage() {
-        var fileInput = document.getElementsByName("file")[0];
-        var nameInput = document.getElementsByName("name")[0];
-        var descriptionInput = document.getElementsByName("description")[0];
-        if (fileInput.value === "" || nameInput.value === "" || descriptionInput.value === "") {
-            alert("Please fill in all required fields.");
-            return false; // Prevent form submission
-        } else {
-            alert("Image uploaded")
-            window.location.reload();
-        }
-        // Perform form submission or further processing here');
-    }
     function copyImageUrl(fileName) {
         var textToCopy = '/images/uploads/' + fileName;
         var tempInput = document.createElement("input");
@@ -67,25 +54,10 @@
         document.body.removeChild(tempInput)
         var alertBox = document.createElement("div");
         alertBox.textContent = "image path copied"
-        alertBox.classList.add("notification"); // Apply the CSS class
+        alertBox.classList.add("notification");
         document.body.appendChild(alertBox);
         setTimeout(function () {
             document.body.removeChild(alertBox);
-        }, 2000); // 2 seconds
+        }, 2000);
     }
-    function deleteImage(id, fileName) {
-        if (confirm('Are you sure you want to delete the document')) {
-            socket.emit('a client deletes an image', { id: id, fileName: fileName, userId: userId })
-        }
-    }
-    socket.on('an image was deleted', (data) => {
-        window.location.reload();
-    })
-</script>
-<script>
-    const imageSearcher = document.getElementById('image-name')
-    imageSearcher.addEventListener('input', e => {
-        const text = imageSearcher.value;
-        // Add show/hide function if image name matches
-    })
 </script>
