--- a/client/views/pages/user.html
+++ b/client/views/pages/user.html
@@ -3,7 +3,7 @@
         <div class="col-3 me-5">
             <div class="row ms-4 mb-5 border border-4 p-2">
                 <h5>Creating Collection</h5>
-                <input type="text" id="userid" name="userid" value="$USER_ID" style="display: none;"/>
+                <input type="text" id="userid" name="userid" value="$USER_ID" style="display: none;" />
                 <div class="row mb-3">
                     <div class="col-8">
                         <select name="collectioncategory" id="collectioncategory" class="form-select"
@@ -51,49 +51,4 @@
         </div>
     </div>
 </div>
-
-<script>
-    const socket = io();
-    const documentPicker = document.getElementById("document-picker")
-    const documentName = document.getElementById("documents-table-name")
-
-    function createCollectionType() {
-        const name = document.getElementById('collectiontypename').value
-        const type = document.getElementById('collectiontypetype').value
-        const userId = document.getElementById('userid').value
-        socket.emit("a client creates a collection category", { name: name, type: type, userId: userId })
-    }
-    function createCollection() {
-        const name = document.getElementById('collectionname').value
-        const type = document.getElementById('collectiontype').value
-        const category = document.getElementById('collectioncategory').value
-        const userId = document.getElementById('userid').value
-        socket.emit("a client creates a collection", { category: category, name: name, type: type, userId: userId })
-    }
-    socket.on("a collection was created", (data) => {
-        window.location.reload()
-    });
-    socket.on("a collection category was created", (data) => {
-        window.location.reload()
-    })
-    
-    function deleteCollection(id) {
-        if (confirm('Are you sure you want to delete the collection?')) {
-            const userId = document.getElementById('userid').value;
-            socket.emit("a client deletes a collection", { id: id, userId: userId });
-        }
-    }
-    function deleteCollectionType(id) {
-        if (confirm('Are you sure you want to delete the collection category?')) {
-            const userId = document.getElementById('userid').value;
-            socket.emit("a client deletes a collection category", { id: id, userId: userId });
-        }
-    }
-    socket.on("a collection was deleted", (data) => {
-        window.location.reload()
-    });
-    socket.on("a collection category was deleted", (data) => {
-        window.location.reload()
-    });
-
-</script>
+<script src="/js/user.js"></script>
