--- a/client/views/partials/navbar/adminoptions.html
+++ b/client/views/partials/navbar/adminoptions.html
@@ -8,5 +8,8 @@
     <a class="nav-link" aria-current="page" href="/images">Images</a>
 </li>
 <li class="nav-item">
+    <a class="nav-link" aria-current="page" href="/user">User Page</a>
+</li>
+<li class="nav-item">
     <a class="nav-link" aria-current="page" href="/admin">Admin</a>
 </li>
