--- a/client/views/pages/documents.html
+++ b/client/views/pages/documents.html
@@ -25,6 +25,7 @@
         </div>
         <div class="col col-10 ps-0 pe-0">
             <div id="documents-content-field" class="card rounded-0">
+                Please choose a document
             </div>
         </div>
     </div>
