--- a/client/views/pages/user.html
+++ b/client/views/pages/user.html
@@ -8,7 +8,7 @@
                     <div class="col-8">
                         <select name="collectioncategory" id="collectioncategory" class="form-select"
                             aria-label="Default select example">
-                            $CREATE_COLLECTION_TYPES_OPTIONS
+                            $CREATE_CATEGORY_OPTIONS
                         </select>
                     </div>
                 </div>
@@ -24,28 +24,28 @@
                             placeholder="Collection type...">
                     </div>
                 </div>
-                <button class="btn btn-primary" onclick="createCollection()">Create</button>
+                <button id="collectionCreateButton" class="btn btn-primary" onclick="createCollection()" disabled>Create</button>
             </div>
             <div class="row ms-4 mb-5 border border-4 p-2">
-                <h5>Creating Collection Type</h5>
+                <h5>Creating Category</h5>
                 <div class="row mb-3">
                     <div class="col-12">
-                        <input class="form-control" id="collectiontypename" name="collectiontypename"
-                            placeholder="Collection Type name...">
+                        <input class="form-control" id="categoryname" name="categoryname"
+                            placeholder="Collection name...">
                     </div>
                 </div>
                 <div class="row mb-3">
                     <div class="col-12">
-                        <input class="form-control" id="collectiontypetype" name="collectiontypetype"
-                            placeholder="Collection Type type...">
+                        <input class="form-control" id="categorytype" name="categorytype"
+                            placeholder="Category type...">
                     </div>
                 </div>
-                <button class="btn btn-primary" onclick="createCollectionType()">Create</button>
+                <button id="categoryCreateButton" class="btn btn-primary" onclick="createCategory()" disabled>Create</button>
             </div>
         </div>
         <div class="col-8 ms-5 p-4 border">
             <h5>Editing Collections</h5>
-            <div class="row row-cols-4">
+            <div id="collections-list" class="row row-cols-4">
                 $COLLECTIONS_LIST
             </div>
         </div>
