--- a/client/views/partials/user/category.html
+++ b/client/views/partials/user/category.html
@@ -1,13 +1,13 @@
 <div class="col text-center border p-4">
     <div class="row">
         <div class="col">
-            <h4>$COLLECTION_TYPE_NAME</h4>
+            <h4>$CATEGORY_NAME</h4>
         </div>
         <div class="col">
-            <button class="btn btn-primary" onclick="deleteCollectionType('$COLLECTION_TYPE_ID')">Delete</button>
+            <button class="btn btn-primary" onclick="deleteCategory('$CATEGORY_ID')">Delete</button>
         </div>
     </div>
     <div class="row row-cols-2">
-        $COLLECTION_TYPE_COLLECTIONS
+        $CATEGORY_COLLECTIONS
     </div>
 </div>
