--- a/client/views/pages/images.html
+++ b/client/views/pages/images.html
@@ -13,7 +13,7 @@
                     <input class="form-control" name="description" placeholder="short description" required>
                 </div>
                 <div class="col mb-3">
-                    <select name="type" id="type" class="form-select" aria-label="Default select example">
+                    <select name="collection" id="collection" class="form-select" aria-label="Default select example">
                         $CREATE_IMAGES_TYPES_OPTIONS
                     </select>
                 </div>
