--- a/client/views/partials/user/collection.html
+++ b/client/views/partials/user/collection.html
@@ -1,6 +1,7 @@
 <div class="card p-0 text-center mt-3">
     <div class="card-body p-0">
         <caption>$COLLECTION_NAME</caption>
+        <caption>($COLLECTION_DOCUMENTS)</caption>
     </div>
     <div class="card-footer bg-white">
         <button class="btn btn-danger p-1 m-0" onclick="deleteCollection('$COLLECTION_ID')">Delete</button>
