--- a/client/views/pages/documents.html
+++ b/client/views/pages/documents.html
@@ -25,7 +25,9 @@
         </div>
         <div class="col col-10 ps-0 pe-0">
             <div id="documents-content-field" class="card rounded-0">
-                Please choose a document
+                <div class="container-fluid ms-3 mt-3">
+                    <h5>Please choose a collection</h5>
+                </div>
             </div>
         </div>
     </div>
