--- a/client/views/pages/user.html
+++ b/client/views/pages/user.html
@@ -18,7 +18,8 @@
                             placeholder="Collection name...">
                     </div>
                 </div>
-                <button id="collectionCreateButton" class="btn btn-primary" onclick="createCollection()" disabled>Create</button>
+                <button id="collectionCreateButton" class="btn btn-primary" onclick="createCollection()"
+                    disabled>Create</button>
             </div>
             <div class="row ms-4 mb-5 border border-4 p-2">
                 <h5>Creating Category</h5>
@@ -28,7 +29,8 @@
                             placeholder="Collection name...">
                     </div>
                 </div>
-                <button id="categoryCreateButton" class="btn btn-primary" onclick="createCategory()" disabled>Create</button>
+                <button id="categoryCreateButton" class="btn btn-primary" onclick="createCategory()"
+                    disabled>Create</button>
             </div>
         </div>
         <div class="col-8 ms-5 p-4 border">
