--- a/client/views/partials/documents/content.html
+++ b/client/views/partials/documents/content.html
@@ -6,7 +6,8 @@
 </div>
 <div class="card-footer">
     <div class="btn-group" role="group" aria-label="Document Admin Menu">
-        <button class="btn btn-secondary" onclick="updateDocument('$DOCUMENT_CONTENT_ID_UPDATE')">Update</button>
+        <button class="btn btn-secondary"
+            onclick="updateDocument('$DOCUMENT_CONTENT_COLLECTION_UPDATE', '$DOCUMENT_CONTENT_ID_UPDATE')">Update</button>
         <button class="btn btn-secondary"
             onclick="deleteDocument('$DOCUMENT_CONTENT_COLLECTION_DELETE', '$DOCUMENT_CONTENT_ID_DELETE')">Delete</button>
     </div>
