--- a/client/views/partials/documents/menu.html
+++ b/client/views/partials/documents/menu.html
@@ -1,4 +1,4 @@
-<div class="col col-12 col-sm-11 col-md-10 mt-3 me-auto ms-auto test">
+<div class="col col-12 col-sm-11 col-md-10 mt-3 me-auto ms-auto">
     <button class="btn btn-secondary text-center w-100 p-1" type="button" data-bs-toggle="offcanvas"
         data-bs-target="#$DOCUMENT_MENU_OFFCANVAS_ID_REF1" aria-controls="$DOCUMENT_MENU_OFFCANVAS_ID_REF2">
         $DOCUMENT_MENU_BUTTON_NAME
