--- a/client/views/partials/documents/update.html
+++ b/client/views/partials/documents/update.html
@@ -5,5 +5,5 @@
     </div>
 </div>
 <div class="card-footer">
-    <button onclick="postUpdateDocument('$DOCUMENT_CONTENT_ID')" class="btn btn-primary">Update</button>
+    <button onclick="postUpdateDocument('$DOCUMENT_ID', '$DOCUMENT_COLLECTION')" class="btn btn-primary">Update</button>
 </div>
