--- a/client/views/partials/images/imageitem.html
+++ b/client/views/partials/images/imageitem.html
@@ -30,11 +30,14 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="image-modal-$IMAGE_MODAL_ID_4">Image</h5>
+                <h5 class="modal-title" id="image-modal-$IMAGE_MODAL_ID_4">$IMAGE_MODAL_NAME</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <img class="img-fluid" src="/images/uploads/$FILENAME_MODAL">
+            </div>
+            <div class="modal-footer">
+                <p id="image-modal-$IMAGE_MODAL_ID_4">$IMAGE_MODAL_DESCRIPTION</p>
             </div>
         </div>
     </div>
