--- a/client/views/partials/documents/createddocumentmessage.html
+++ b/client/views/partials/documents/createddocumentmessage.html
@@ -1,1 +1,3 @@
-<div class="container-fluid mt-3"><h3>Document was created</h3></div>
+<div class="container-fluid mt-3">
+    <h3>Document was created</h3>
+</div>
