--- a/client/views/partials/documents/menuoption.html
+++ b/client/views/partials/documents/menuoption.html
@@ -1,3 +1,4 @@
-<button class="list-group-item list-group-item-action text-reset" data-bs-dismiss="offcanvas" aria-label="Close" onclick="pickCollection('$MENU_OPTION_CATEGORY')">
+<button class="list-group-item list-group-item-action text-reset" data-bs-dismiss="offcanvas" aria-label="Close"
+    onclick="pickCollection('$MENU_OPTION_CATEGORY')">
     $MENU_OPTION_NAME
 </button>
