--- a/client/views/pages/login.html
+++ b/client/views/pages/login.html
@@ -5,14 +5,14 @@
             <div class="form-floating mb-3">
                 <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com"
                     required>
-                <label for="floatingInput">Email address</label>
+                <label for="email">Email address</label>
             </div>
             <div class="form-floating mb-3">
                 <input type="password" class="form-control" id="password" name="password" placeholder="Password"
                     required>
                 <label for="password">Password</label>
             </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit" onclick="signIn()">Sign in</button>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
             <div class="mb-3">
                 <p>Don't have an account? <a href="/register">Sign up</a> now!</p>
             </div>
