--- a/client/public/css/documents.css
+++ b/client/public/css/documents.css
@@ -43,3 +43,20 @@
     font-size: 0.75vw;
     float: right;
 }
+#loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#loading-overlay span {
+    color: #fff;
+    font-size: 24px;
+}
