--- a/client/views/pages/user.html
+++ b/client/views/pages/user.html
@@ -1,3 +1,6 @@
+<div id="loading-overlay" style="display: none;">
+    <span>Loading...</span>
+</div>
 <div class="container-fluid mt-3">
     <div class="row">
         <div class="col-3 me-5">
