--- a/client/views/layouts/socket.html
+++ b/client/views/layouts/socket.html
@@ -12,8 +12,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
+        
     <script src="/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/themes/prism.min.css">
     $CSS_LINK
     <title>$PAGE_TITLE</title>
 </head>
@@ -21,6 +23,7 @@
 <body>
     <header>$PAGE_HEADER</header>
     <main>$PAGE_MAIN</main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/prism.min.js"></script>
 </body>
 
 </html>
