--- a/client/views/partials/images/imageitem.html
+++ b/client/views/partials/images/imageitem.html
@@ -1,4 +1,4 @@
-<div class="col card p-0 image-container">
+<div id="$IMAGE_CONTAINER_ID" class="col card p-0 image-container">
     <div class="card-header">
         <div class="row">
             <div class="col">
