--- a/client/views/pages/images.html
+++ b/client/views/pages/images.html
@@ -23,7 +23,8 @@
                 <div class="col mb-3">
                     <div class="input-group">
                         <span class="input-group-text">Search image:</span>
-                        <input type="text" id="image-search-field" class="form-control" placeholder="Image name..." aria-label="Image Name" aria-describedby="input-group-left">
+                        <input type="text" id="image-search-field" class="form-control" placeholder="Image name..."
+                            aria-label="Image Name" aria-describedby="input-group-left">
                     </div>
                 </div>
             </div>
@@ -35,7 +36,6 @@
         </div>
     </div>
 </div>
-<input type="text" id="userid" name="userid" value="$USER_ID" style="display: none;" />
 <script src="/js/images.js"></script>
 
 <script>
@@ -44,7 +44,7 @@
     imageSearcher.addEventListener('input', e => {
         const searchInput = imageSearcher.value.toLowerCase();
         images.forEach(image => {
-            if(image.id.toLocaleLowerCase().includes(searchInput)){
+            if (image.id.toLocaleLowerCase().includes(searchInput)) {
                 image.style.display = 'flex';
             } else {
                 image.style.display = 'none';
